# indoor_virus_spread

./: .gitignore  Makefile  README.md
config/: lab_scenario_wall.json  restaurant-scenario.json
indoor_quanta_2D/: CMakeLists.txt  README.md
indoor_quanta_2D/config/: restaurant_quanta1.json  restaurant_quanta2.json
indoor_quanta_2D/model/: vp_res_cell.hpp
indoor_quanta_2D/visualization/: vp2.json
indoor_quanta_2d/: .gitignore  Makefile  README.md
indoor_quanta_2d/config/: Restaurant.json  Restaurant_scenario1-1.json  Restaurant_scenario1-2.json  Restaurant_scenario2-1.json  Restaurant_scenario2.json  restaurant-scenario.json  restaurant_plan2D.json
indoor_quanta_2d/model/: vp_res_cell.hpp
indoor_quanta_2d/visualization/: quanta_speaking_only.json  restaurant_breathing_only.json  vp2.json
indoor_spread_2D/: README.md
indoor_spread_2D/config/: Restaurant.json  Restaurant_scenario1-1.json  Restaurant_scenario1-2.json  Restaurant_scenario1.json  Restaurant_scenario2-1.json  Restaurant_scenario2.json  celldevs_data_1.json  chamber-scenario.json  lab_scenario_wall.json  restaurant_plan2D.json  restaurant_scenario01.json  restaurant_vent2.json  vsim_config.json
indoor_spread_2D/model/: vp_res_cell.hpp
indoor_spread_2D/visualization/: co2.json  vp2.json
indoor_spread_basic/: CMakeLists.txt
indoor_spread_basic_2D/: .gitignore  Makefile  README.md
indoor_virus_spread_avg_Concentration/: CMakeLists.txt  readme.md
model/: makefile  vp_coupled.hpp  vp_lab_cell.hpp  vp_main.cpp  vp_res_cell.hpp  xxmakefile
visualization/: vp2.json
(+29 files in other folders)
